# powerpoint-remote

./: LICENSE  README.md  pyproject.toml
powerpoint_remote/: __main__.py  app.py  cli.py
powerpoint_remote/templates/: index.html
